--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,7 @@ alembic==1.13.1
 
 # Authentication and security
 passlib[bcrypt]==1.7.4
-python-jose[cryptography]==3.3.0
-PyJWT==2.8.0
+PyJWT[cryptography]==2.8.0
 python-multipart==0.0.6
 
 # Configuration and validation
