--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -190,7 +190,31 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - name: Build and push Docker image
+    - name: Build Docker image locally for scanning
+      id: build-local
+      uses: docker/build-push-action@v5
+      with:
+        context: .
+        file: ./Dockerfile
+        push: false
+        load: true
+        tags: local-scan:${{ github.sha }}
+        cache-from: type=gha
+        platforms: linux/amd64
+
+    - name: Run vulnerability scan on local image
+      run: |
+        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
+          aquasec/trivy image --format json --output trivy-report.json \
+          local-scan:${{ github.sha }}
+
+    - name: Upload vulnerability scan results
+      uses: actions/upload-artifact@v4
+      with:
+        name: trivy-results
+        path: trivy-report.json
+
+    - name: Build and push Docker image to ECR
       id: build
       uses: docker/build-push-action@v5
       with:
@@ -204,18 +228,6 @@ jobs:
         platforms: linux/amd64
         build-args: |
           BUILDKIT_INLINE_CACHE=1
-
-    - name: Run vulnerability scan
-      run: |
-        docker run --rm -v /var/run/docker.sock:/var/run/docker.sock \
-          aquasec/trivy image --format json --output trivy-report.json \
-          ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-
-    - name: Upload vulnerability scan results
-      uses: actions/upload-artifact@v4
-      with:
-        name: trivy-results
-        path: trivy-report.json
 
   # Deploy to Production
   deploy-prod:
